# spreadsheet-to-cpplib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.bat  long_desc.md  pyproject.toml  requirements.txt  setup.py  spreadsheet-to-cpplib.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
cli/: clitest.py  run.py
docs/: api.md  user-guide.md
example/csv_example/: example.csv  example.h
lib/: csvToCpp.py  fileOperations.py  parse.py  template_cmake.py  template_headeronly.py  template_source.py  xlsmToCpp.py
output/: CMakeLists.txt
output/src/: generated_spreadsheet.cpp  generated_spreadsheet.h
render/: asciitext.py
sample/: sample1.xlsm  sample3.xlsx
spreadsheet_to_cpplib/: csvToCpp.py  fileOperations.py  main.py  run.py  template_source.py
spreadsheet_to_cpplib/lib/: csvToCpp.py  fileOperations.py  template_cmake.py  template_headeronly.py  template_math.py
src/spreadsheet_to_cpplib/: main.py
src/spreadsheet_to_cpplib/lib/: exprtk.hpp
tests/: __init__.py  test_basic.py
