[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-to-cpplib"
version = "1.2.0"
description = "Convert spreadsheets (XLSM, CSV) to C++ library projects with CMake support"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Sheik S Shajeen Ahamed", email = "shajeenahmed@gmail.com"}
]
maintainers = [
    {name = "Sheik S Shajeen Ahamed", email = "shajeenahmed@gmail.com"}
]
keywords = ["spreadsheet", "cpp", "cmake", "converter", "xlsm", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "xlrd>=2.0.0",
    "pyfiglet>=0.8.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/shajeen/spreadsheet-to-cpplib"
Documentation = "https://github.com/shajeen/spreadsheet-to-cpplib/wiki"
Repository = "https://github.com/shajeen/spreadsheet-to-cpplib"
"Bug Tracker" = "https://github.com/shajeen/spreadsheet-to-cpplib/issues"
Changelog = "https://github.com/shajeen/spreadsheet-to-cpplib/blob/main/CHANGELOG.md"

[project.scripts]
spreadsheet-to-cpplib = "src.spreadsheet_to_cpplib.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["lib/*.hpp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]